tests/04-repetitive_args.stderr
error: unexpected token: expected a `{integer}` type
 --> tests/04-repetitive_args:3:13
  |
3 | #[bitflag(u8, u16)]
  |             ^

error: unexpected token: expected a `{integer}` type
  --> tests/04-repetitive_args:11:11
   |
11 | #[bitflag(no_auto_debug, no_auto_debug)]
   |           ^^^^^^^^^^^^^
